# cargo-fel4

./: Cargo.toml  README.md  README.rx
cmake_config/: Cargo.toml
src/: command_ext.rs  config.rs  generator.rs  main.rs  new_cmd.rs
templates/: Cargo.toml.part  fel4_test.rs  lib.rs
