[package]
name = "cargo-fel4"
description = "A cargo subcommand for automating feL4 (seL4 for Rust) development"
version = "0.7.2"
authors = ["Jon Lamb <lamb.jon.io@gmail.com>", "Zachary Pierce <zachary.pierce@gmail.com>", "Dan Pittman <dan@dpitt.me>"]
repository = "https://github.com/maindotrs/cargo-fel4"
homepage = "https://github.com/maindotrs/cargo-fel4"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
cargo_metadata = "0.5"
cmake_config = { version = "0.1.1", path = "cmake_config" }
colored = "1.6"
fel4-config = "0.3"
log = "0.4"
structopt = "0.2"

[dev-dependencies]
proptest = "0.8.5"
tempfile = "3"
lazy_static = "1.0"
