[package]
name = "cmake_config"
version = "0.1.0"
description = "A parser for CMakeCache.txt files"
repository = "https://github.com/maindotrs/cargo-fel4"
homepage = "https://github.com/maindotrs/cargo-fel4"
license-file = "../LICENSE"

[dependencies]
lazy_static = "0.1"
regex = "1"
syn = "0.13"

[dev-dependencies]
proptest = "0.8.6"
